initial css n html

--- a/public/index.html
+++ b/public/index.html
@@ -1,9 +1,55 @@
-
 <html>
   <head>
+  	<link rel="stylesheet" type="text/css" href="../includes/stylesheets/application.css" />
     <title>My ParseApp site</title>
   </head>
-  <body>
-    Hello Brian!
-  </body>
+<body id="home-page">
+	<header>
+		<div>
+			<img src="" alt="Product Logo" />
+
+			<ul>
+				<li>Meet.</li>
+				<li>Connect.</li>
+				<li>Forget.</li>
+			</ul>
+		</div>
+	</header>
+
+	<div id="home-top-content">
+		<div>
+			<div id="home-top-left">
+				<div>
+					<h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin ultrices imperdiet massa, porta placerat felis cursus a.</h3>
+					<a class="btn">Go!</a>
+				</div>
+			</div>
+
+			<div id="home-top-right">
+				<div>
+					<a class="btn">Go!</a>
+				</div>
+				<div>
+					<a class="btn">Go!</a>
+				</div>
+				<div>
+					<a class="btn">Go!</a>
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<div id="content">
+		<div></div>
+		<div></div>
+		<h1>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin ultrices imperdiet massa, porta placerat felis cursus a. Pellentesque tempus tristique est, in tincidunt tortor vulputate ac. Sed in facilisis tortor 
+		</h1>
+	</div>
+
+	<footer>
+		<div>
+			<p>Copyright 2014</p>
+		</div>
+	</footer>
+</body>
 </html>
