Chat, Trip details

--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,8 @@
         <script type="text/javascript" src="http://code.angularjs.org/1.1.1/angular-resource.js"></script>
         <script type="text/javascript" src="http://code.angularjs.org/1.1.1/angular-sanitize.js"></script>
         <script type="text/javascript" src="https://www.parsecdn.com/js/parse-1.2.9.min.js"></script>
+        <div pub-key="pub-8e474368-7add-4283-9b87-caf9efbcdedc" sub-key="sub-1ffec1f3-9463-11e1-9376-77819258e702" ssl="off" origin="pubsub.pubnub.com" id="pubnub"></div>
+        <script src="http://cdn.pubnub.com/pubnub-3.1.min.js"></script>
         <script type="text/javascript" src="mobile/js/app.js"></script>
         <script type="text/javascript" src="mobile/js/directives/autocomplete.js"></script>
         <script type="text/javascript" src="mobile/js/utils.js"></script>
