--- a/public/index.html
+++ b/public/index.html
@@ -85,7 +85,8 @@
                 <div class="span12 center">
                     <!-- LOGO -->
                     <a class="brand pull-left" href="./">
-                        <img src="includes/images/logo.png" alt="Treble">
+                        <span>Serendipit<span>us</span></span>
+                        <img src="includes/images/pages/welcome/road.png" alt="" />
                     </a>
                     <!-- END LOGO -->
 
@@ -100,11 +101,9 @@
                     <!-- MAIN MENU -->
                     <ul id="main-menu" class="nav-collapse collapse">
                         <li><a href="#page-welcome">Home</a></li>
-                        <li><a href="#page-work">Work</a></li>
-                        <li><a href="#page-features">Features</a></li>
-                        <li><a href="#page-about">About</a></li>
-                        <li><a href="#page-blog">Blog</a></li>
-                        <li><a href="#page-contact">Contact</a></li>
+                        <li><a href="#page-about">Trips</a></li>
+                        <li><a href="#page-work">Profile</a></li>
+                        <li><a href="#page-features">Shop</a></li>
                     </ul>
                     <!-- END MAIN MENU -->
                     
@@ -136,7 +135,7 @@
             </div>
         </div> -->
     
-<script src="includes/js/application/application.min.js" type="text/javascript"></script>
+    <script src="includes/js/application/application.min.js" type="text/javascript"></script>
    
     </body>
     </html>
