--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,7 @@
     <!-- STYLESHEETS -->
     <link rel="stylesheet" href="includes/stylesheets/bootstrap.css" type="text/css" />
     <link rel="stylesheet" type="text/css" href="includes/stylesheets/application.css" />
+     <link rel="stylesheet" type="text/css" href="includes/stylesheets/widgets.css" />
     
     <!-- GOOGLE WEB FONTS -->
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,700,600,300,800' rel='stylesheet' type='text/css'>
