--- a/public/index.html
+++ b/public/index.html
@@ -107,6 +107,8 @@
                         <li><a href="#page-features">Shop</a></li>
                     </ul>
                     <!-- END MAIN MENU -->
+
+                    <div id="user-profile" ng-show="isLoggedIn" >Hey, <span>Brian</span></div>
                     
                     <!-- SOCIAL ICONS -->
                     <div class="social-icons hover-big pull-right">
